# qt-projects

./: README.md
BlackJack/: .gitignore  BlackJack.pro  CMakeLists.txt  images.qrc  main.cpp
BlackJack/include/: Card.cpp  Card.h  Deck.cpp  Deck.h  Game.cpp  Game.h  GenericPlayer.cpp  GenericPlayer.h  Hand.cpp  Hand.h  House.cpp  House.h  Player.cpp  Player.h  Scene.cpp  Scene.h
